# ai_gateaway

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapters/openai/: client.rs  mapper.rs  mod.rs
src/api/: chat.rs  mod.rs  routes.rs
src/protocol/: mod.rs  request.rs  response.rs  stream.rs
src/utils/: error.rs
