[package]
name = "ai_gateaway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
futures-util = "0.3.31"
log = "0.4.29"
rand = "0.8"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
